# thrift4go

./: .gitignore  .travis.yml  Makefile  Makefile.environment  README  README.md  configure.ac  merge_and_build.sh
lib/go/: Make.deps  Makefile  Makefile.am
lib/go/org/apache/thrift/: tprocessor.go  tprocessor_factory.go
lib/go/src/thrift/: Makefile  librarytest.thrift  tapplication_exception.go  tapplication_exception_test.go  tbase.go  tbinary_protocol.go  tbinary_protocol_test.go  tcompact_protocol.go  tcompact_protocol_test.go  tcontainer.go  tdebug_protocol.go  texception.go  texception_test.go  tfield.go  tframed_transport.go  tframed_transport_test.go  thttp_client.go  thttp_client_test.go  tiostream_transport.go  tiostream_transport_test.go  tjson_protocol.go  tjson_protocol_test.go  tlist.go  tmap.go  tmap_test.go  tmemory_buffer.go  tmemory_buffer_test.go  tnonblocking_server_socket.go  tnonblocking_socket.go  tnonblocking_transport_test.go  tnumeric.go  tprocessor.go  tprocessor_factory.go  tprotocol.go  tprotocol_exception.go  tprotocol_factory.go  tprotocol_test.go  tserver.go  tserver_socket.go  tserver_transport.go  (+10 more)
lib/go/src/thrift/tests/: librarytest.thrift  lists.thrift  maps.thrift  tapplication_exception_test.go  tbinary_protocol_test.go  (+12 more)
lib/go/thrift/: Makefile  tapplication_exception.go  tapplication_exception_test.go  tbase.go  tbinary_protocol.go  tbinary_protocol_test.go  tcompact_protocol.go  tcompact_protocol_test.go  tcompare.go  tcontainer.go  texception.go  texception_test.go  tfield.go  tframed_transport.go  tframed_transport_test.go  thttp_client.go  thttp_client_test.go  tiostream_transport.go  tiostream_transport_test.go  tjson_protocol.go  tjson_protocol_test.go  tlist.go  tmap.go  tmap_test.go  tmemory_buffer.go  tmemory_buffer_test.go  tmessage.go  tmessagetype.go  tnonblocking_server.go  tnonblocking_server_socket.go  tnonblocking_socket.go  tnonblocking_transport.go  tnonblocking_transport_test.go  tnumeric.go  tprocessor.go  tprocessor_factory.go  tprotocol.go  tprotocol_exception.go  tprotocol_factory.go  tprotocol_test.go  (+15 more)
lib/go/thrift/base/: Makefile  tapplication_exception.go  tapplication_exception_test.go  tbase.go  tprocessor.go  tprocessor_factory.go
lib/go/thrift/protocol/: Makefile  tbinary_protocol.go  tbinary_protocol_test.go  tcompact_protocol.go  tcompact_protocol_test.go  tcompare.go  tcontainer.go  tfield.go  tlist.go  tmap.go  tmessage.go  tmessagetype.go  tnumeric.go  tprotocol.go  tprotocol_exception.go  tprotocol_factory.go  tprotocol_test.go  tset.go  tsimple_json_protocol.go  tsimple_json_protocol_test.go  tstruct.go  ttype.go
lib/go/thrift/server/: Makefile  tnonblocking_server.go  tserver.go  tserver_test.go  tsimple_server.go
lib/go/thrift/transport/: Makefile  tframed_transport.go  tframed_transport_test.go  thttp_client.go  thttp_client_test.go  tiostream_transport.go  tiostream_transport_test.go  tmemory_buffer.go  tmemory_buffer_test.go  tnonblocking_server_socket.go  tnonblocking_socket.go  tnonblocking_transport.go  tnonblocking_transport_test.go  tserver_socket.go  tserver_transport.go  tsocket.go  ttransport.go  ttransport_exception.go  ttransport_factory.go  ttransport_test.go
(+72 files in other folders)
